savage: Warn if broken drm maps are detected

Linux kernel 2.6.30 - 2.6.39 had broken drm maps which would result
in assorted problems. Leave a message in the log if it looks like
the framebuffer map and the aperture map are mixed up.

https://bugs.freedesktop.org/show_bug.cgi?id=32511

Signed-off-by: Tormod Volden <debian.tormod@gmail.com>